--- a/php-test/docker-compose.yml
+++ b/php-test/docker-compose.yml
@@ -2,7 +2,20 @@ version: '2'
 services:
 
     # Application container
-    
+            
+    php:
+        build: .
+        restart: unless-stopped
+        volumes:
+            - ./:/server/http
+        ports:
+            - "3306"
+            #- "443:443"
+        links:
+            - mysql
+        environment:
+            DEBUG: 'true'
+
     mysql:
         image: recipe
         restart: unless-stopped
@@ -14,38 +27,26 @@ services:
             MYSQL_USER: root
             MYSQL_PASSWORD: 
             SITE_URL : http://localhost/php/php-test/web/
-        networks:
-            impact: external: true
-            
-    php:
-        build: .
-        restart: unless-stopped
-        volumes:
-            - ./:/server/http
-        ports:
-            - "8080:80"
-            #- "443:443"
-        links:
-            - postgres
-            - redis
-        environment:
-            DEBUG: 'true'
+        # networks:
+        #     impact: 
+        #     external: true
 
-    postgres:
-        image: onjin/alpine-postgres:9.5
-        restart: unless-stopped
-        ports:
-            - "5432:5432"
-        environment:
-            LC_ALL: C.UTF-8
-            POSTGRES_USER: hellofresh
-            POSTGRES_PASSWORD: hellofresh
-            POSTGRES_DB: hellofresh
+        
+    # postgres:
+    #     image: onjin/alpine-postgres:9.5
+    #     restart: unless-stopped
+    #     ports:
+    #         - "5432:5432"
+    #     environment:
+    #         LC_ALL: C.UTF-8
+    #         POSTGRES_USER: hellofresh
+    #         POSTGRES_PASSWORD: hellofresh
+    #         POSTGRES_DB: hellofresh
 
-    redis:
-        image: sickp/alpine-redis:3.2.2
-        restart: unless-stopped
-        ports:
-            - "6379:6379"
+    # redis:
+    #     image: sickp/alpine-redis:3.2.2
+    #     restart: unless-stopped
+    #     ports:
+    #         - "6379:6379"
 
 
