--- a/php-test/docker-compose.yml
+++ b/php-test/docker-compose.yml
@@ -11,25 +11,25 @@ services:
         ports:
             - "3306"
             #- "443:443"
-        # links:
-        #     - mysql
+        links:
+            - mysql
         environment:
             DEBUG: 'true'
 
-    # mysql:
-    #     image: recipe
-    #     restart: unless-stopped
-    #     ports:
-    #         - "3306"
-    #     environment:
-    #         MYSQL_DB_CONNECTION: food
-    #         MYSQL_DB_NAME: food
-    #         MYSQL_USER: root
-    #         MYSQL_PASSWORD: 
-    #         SITE_URL : http://localhost/php/php-test/web/
-        # networks:
-        #     impact: 
-        #     external: true
+    mysql:
+        image: recipe
+        restart: unless-stopped
+        ports:
+            - "3306"
+        environment:
+            MYSQL_DB_CONNECTION: food
+            MYSQL_DB_NAME: food
+            MYSQL_USER: root
+            MYSQL_PASSWORD: 
+            SITE_URL : http://localhost/php/php-test/web/
+        networks:
+            impact: 
+            external: true
 
 
     # postgres:
