--- a/php-test/Dockerfile
+++ b/php-test/Dockerfile
@@ -1,54 +1,37 @@
-#FROM quay.io/hellofresh/php70:7.1
-FROM quay.io/food/php:8.3.9-apache
+# 
 
-# RUN apt-get update && apt upgrade -y
+# Start from the base PHP image with Apache
+FROM php:8.3.9-apache
 
-# RUN docker-php-ext-install mysqli pdo pdo_mysql && docker-php-ext-enable mysqli
+# Update and upgrade packages
+RUN apt-get update \
+    && apt-get upgrade -y
 
-# #ADD./app/var/www/html
+# Install necessary PHP extensions for MySQL support
+RUN docker-php-ext-install mysqli pdo pdo_mysql \
+    && docker-php-ext-enable mysqli
 
-# COPY ./docker/nginx/default.conf  /etc/apache2/sites-available/default.conf
+# Copy your PHP application files into Apache's document root
+ADD ./web /var/www/html
 
-# RUN echo 'SetEnv MYSQL_DB_CONNECTION $(MYSQL_DB_CONNECTION}' >> /etc/apache2/conf-enabled/environment.conf
+# Copy your Apache virtual host configuration if necessary
+COPY ./docker/nginx/default.conf /etc/apache2/sites-available/default.conf
 
-# RUN echo 'SetEnv MYSQL_DB_NAME ${MYSQL_DB_NAME}' >> /etc/apache2/conf-enabled/environment.conf
+# Set environment variables in Apache configuration
+# RUN echo 'SetEnv MYSQL_DB_CONNECTION ${MYSQL_DB_CONNECTION}' >> /etc/apache2/conf-enabled/environment.conf \
+#     && echo 'SetEnv MYSQL_DB_NAME food' >> /etc/apache2/conf-enabled/environment.conf \
+#     && echo 'SetEnv MYSQL_USER root' >> /etc/apache2/conf-enabled/environment.conf \
+#     && echo 'SetEnv MYSQL_PASSWORD ${MYSQL_PASSWORD}' >> /etc/apache2/conf-enabled/environment.conf \
+#     && echo 'SetEnv SITE_URL http://localhost' >> /etc/apache2/conf-enabled/environment.conf 
 
-# RUN echo 'SetEnv MYSQL_USER ${MYSQL_USER}' >> /etc/apache2/conf-enabled/environment.conf
+# # Set ServerName directive and configure Apache
+# RUN echo "ServerName localhost:80" >> /etc/apache2/apache2.conf \
+#     && a2enmod rewrite headers \
+#     && a2dissite 000-default \
+#     && service apache2 restart
 
-# RUN echo 'SetEnv MYSQL_PASSWORD ${MYSQL_PASSWORD}' >> /etc/apache2/conf-enabled/environment.conf
-
-# RUN echo 'SetEnv SITE_URL ${SITE_URL}' >> /etc/apache2/conf-enabled/environment.conf
-
-# RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf &&\
-
-# a2enmod rewrite &&\
-
-# a2enmod headers &&\
-
-# a2enmod rewrite &&\
-
-# a2dissite 000-default &&\
-
-# a2ensite my-site &&\
-
-# service apache2 restart
-
-# Adds nginx configurations
-#ADD ./docker/nginx/default.conf   /etc/nginx/sites-available/default
-
-# Environment variables to PHP-FPM
-RUN sed -i -e "s/;clear_env\s*=\s*no/clear_env = no/g" /etc/php/8.3.9/fpm/pool.d/www.conf
-
-# Set apps home directory.
-ENV APP_DIR /server/http
-
-# Adds the application code to the image
-ADD . ${APP_DIR}
-
-# Define current working directory.
-WORKDIR ${APP_DIR}
-
-# Cleanup
-RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
+# Expose port 80 to the outside world
 EXPOSE 80
+
+# Command to run Apache in the foreground when the container starts
+# CMD ["apache2-foreground"]
