--- a/php-test/docker/nginx/default.conf
+++ b/php-test/docker/nginx/default.conf
@@ -22,7 +22,9 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/run/php/php7.1-fpm.sock;
+        #fastcgi_pass unix:/run/php/php7.1-fpm.sock;
+        fastcgi_pass unix:/run/php/php8.3.9-fpm.sock;
+
         fastcgi_index index.php;
         include fastcgi_params;
         include fastcgi.conf;
